--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-  <ol>
-    <li>Name : John Doe</li>
-    <li>Email ID: sth@gmail.com</li>
-    <li>Address : Unibrmen</li>
-  </ol>
+  
+    <h1>Name : John Doe</h1>
+    <p>Email ID: sth@gmail.com</p>
+    <p>Address : Unibrmen</p>
+  
   <form class="" action="mailto :info@yahoo.com " method="post">
     <label>Your Name:</label>
     <input type="text" name="yourName" value=""><br><br>
